# langgraph-travel-agent

./: .env.example  .sesskey  README.md  README_TRAVEL_AGENT.md  cities.sh  langgraph.json  pyproject.toml  start.sh  start_web.sh  stop.sh  test_tools.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
logs/: app.log.20250825  app.log.20250826  error.log.20250825
src/travel_agent/: __init__.py  auth.py  graph.py
src/travel_agent/config/: __init__.py  logging_config.py  settings.py
src/travel_agent/core/: __init__.py  llm_factory.py  models.py  workflow.py
src/travel_agent/core/models/: __init__.py  budget.py  travel_info.py
src/travel_agent/core/prompts/: __init__.py  activity_parsing.py  budget_analysis.py  city_extraction.py  config.py  config_generation.py  duration_planning.py  dynamic_planning.py  fallback.py  intent_analysis.py  intent_classification.py  plan_validation.py  route_generation.py  smart_defaults.py  travel_advisor.py  travel_extraction.py  travel_planner.py  travel_validation.py
src/travel_agent/core/workflow/: __init__.py  nodes.py  routing.py  state.py  utils.py
src/travel_agent/data/: manager.py
src/travel_agent/templates/: README.md  __init__.py  manager.py  unified_response_template.j2  unified_route_template.j2
src/travel_agent/tools/: __init__.py  currency.py  flights.py  hotels.py  places.py  planner.py  rag.py  real_data_enhancer.py  weather.py
src/travel_agent/ui/: app.py
src/travel_agent/ui/static/css/: style.css
src/travel_agent/ui/static/js/: app.js
src/travel_agent/ui/templates/: index.html
travel_data/: attractions.xlsx  hotels.xlsx  restaurants.xlsx  transport.xlsx  摩洛哥酒店门票.xlsx
