[project]
name = "travel-agent"
version = "1.0.0"
description = "智能旅行规划助手 - 基于LangGraph的AI旅行规划系统"
authors = [
    { name = "黄建", email = "huangjian@example.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.3.19",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.17",
    "tavily-python>=0.4.0",
    "python-fasthtml>=0.12.1",
    "langgraph-sdk>=0.1.57",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.0.0",
]


[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["travel_agent"]
[tool.setuptools.package-dir]
"travel_agent" = "src/travel_agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

# 代码质量工具配置已移除

# 开发依赖已移除
